fixed wide screen overflow

--- a/public/custom.css
+++ b/public/custom.css
@@ -19,10 +19,10 @@ transform: translateX(0);
 }
 
  #studPage {
-  background-image: url("img/stud1.webp");
-  height: 100vh;
+  background-image: url("img/stud1.webp"); 
   transition: background-image .7s ease-in-out; 
 } 
+
 
 
 @media only screen and (min-width: 1024px)  {
